added profileCard template call into sidebar

--- a/code/client/templates/authenticated/sidebar.html
+++ b/code/client/templates/authenticated/sidebar.html
@@ -1,5 +1,8 @@
 <template name="sidebar">
   <aside class="sidebar">
+
+  {{> profilecard}}
+
     <h5>Channels</h5>
     <ul>
       {{#each channel in channels}}
