edited message template and template handlers

--- a/code/client/templates/authenticated/message.html
+++ b/code/client/templates/authenticated/message.html
@@ -1,13 +1,27 @@
 <template name="message">
   <div class="message">
     {{#if showHeader}}
-      <header>
-        <h4>{{name owner}} <span>{{messageTimestamp timestamp}}</span></h4>
-      </header>
+      <div class="whois">
+        <img class="avatar" src="http://placehold.it/100x100">
+        <header>
+          <h4>{{name owner}} <span>{{messageTimestamp timestamp}}</span></h4>
+        </header>
+      </div>
     {{/if}}
+
+    <!-- {{#if messageFromGameBot}} -->
+    <img src="http://placehold.it/300x200">
+    <!-- {{/if}} -->
 
     <div class="body">
       {{{parseMarkdown message}}}
     </div>
+  
+    <!-- {{#if messageFromGameBot(message) }} -->
+    <button class="">Choice 1</button>
+    <button class="">Choice 2</button>
+    <button class="">Choice 3</button>
+    <!-- {{/if}} -->
+
   </div>
 </template>
