--- a/code/client/stylesheets/module/_channel.scss
+++ b/code/client/stylesheets/module/_channel.scss
@@ -1,6 +1,6 @@
 $red: #DA5347;
-$blue: #1B9EDB;
-$green: #75BA50;
+$blue: #8f8fd6;
+$green: #4254d9;
 
 body.is-channel .container {
   width: 100%;
