--- a/code/client/templates/globals/header.html
+++ b/code/client/templates/globals/header.html
@@ -3,7 +3,7 @@
 	  <div class="container">
 	    <div class="navbar-header">
 	      <a class="navbar-brand" href="/messages/general">
-          MegaCorp Intranet
+          Gamebots.ai
           <span>{{reminder}}</span>
         </a>
 	    </div>
