fixed user profilecard template

--- a/code/client/templates/authenticated/profilecard.html
+++ b/code/client/templates/authenticated/profilecard.html
@@ -6,9 +6,9 @@
 	<div id="user-stats">
 		<h3>{{ user.username }}</h3>
         
-		<p>Lives: {{ user.lives }} </p>
-		<p>XP: {{ user.xp }} </p>
-		<p>Bits: {{ user.bits }} </p>
+		<p>Lives: {{ user.profile.lives }} </p>
+		<p>XP: {{ user.profile.xp }} </p>
+		<p>Bits: {{ user.profile.bits }} </p>
 	</div>
     </center>
 
